src/objects/WorkflowRule__c.object
<CustomObject>
    <description>Object to hold the basic information (header ) of the rule. It is related to Rule Actions and Criteria</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayActions__c</fullName>
        <description>This is field is update via trigger AW_trg_RuleAction everytime an action is updated or inserted The purpose of the field is to show ALL actions of a rule in a summary level as follows :
Collect all actions assigned to the rule 
Each rule action will be displayed in separate line in URL format  
For each action show the first 100 chars by concatenating the fields  Type__c&amp;&amp; Related_Object__c &amp;&amp; DispalyField__c with a &quot;...&quot;  in URL Format 
The URL would take the user to this Rule Action Display Page for the Rule Action ID
If you hover on that you get show the full value of RuleAction__c.DisplayfilterLogic__c present</description>
        <label>Display Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayfilterLogic__c</fullName>
        <description>Captures  logic expression  using the fileds of the defined rule criteria as operands ( rule criteria ) For Example : if a rule had 3 criteria : Criteria 1 ( Industry  =   &apos;Banking&apos; ) , Criteria 2 (Country=&apos;United States&apos;) , Criteria 3 (Type=&apos;Active&apos;  ) the Display Filter logic for  : Criteria  1 AND Criteria  2 OR Criteria  3   would be   Industry  =   &apos;Banking&apos; AND Country=&apos;United States&apos; OR Type=&apos;Active&apos;
During save the DisplayfilterLogic is calculated based on the value captured on  the Filter_Logic value ( 1 AND 2 OR 3 ) The calcuation derives the field name of the rule criteria  for the positional operators. The field is used for display purposes  to the user</description>
        <label>Rule Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rule__c</fullName>
        <label>Evaluation Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Record is created or edited and did not previously meet the rule criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record is created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record is created or edited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Click Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <description>Captures the logic based on position of the rule criteria For Example : if a rule had 3 criteria : Criteria 1, Criteria 2, Criteria 3  the Filter logic could be : 1 AND 2 OR 3</description>
        <inlineHelpText>Captures the logic based on position of the rule criteria For Example : if a rule had 3 criteria : Criteria 1, Criteria 2, Criteria 3  the Filter logic could be : 1 AND 2 OR 3</inlineHelpText>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormattedFilterLogic__c</fullName>
        <description>Captures  logic expression  using the Salesforce Unique IDs of the defined rule criteria as operands ( rule criteria ) For Example : if a rule had 3 criteria : Criteria 1 (a0NA000000Rt5nTMAR ) , Criteria 2 (a0NA000000Rt5nYMAR ) , Criteria 3 (a0NA000000Rt5nYMAR  ) the Formatted Filter logic for  : Criteria  1 AND Criteria  2 OR Criteria  3   would be  a0NA000000Rt5nTMAR AND a0NA000000Rt5nYMAR OR a0NA000000Rt5nnMAB
During save the FormatedFilterLogic is calculated based on the value captured on  the Filter_Logic value ( 1 AND 2 OR 3 ) The calcuation derives the SFDC id for the positional operators. The field is used hidden to the user and serves to &quot;map&quot; the logic expression with the criteria records</description>
        <label>FormattedFilterLogic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_SubCat__c</fullName>
        <description>Provides auto-sorting and filtering capability for Task/Activity View</description>
        <formula>RIGHT ( Name, LEN(Name)-LEN(&apos;TASK: &apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task SubCat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Workflow Rule</label>
    <listViews>
        <fullName>Activity_Creation_Rules</fullName>
        <columns>Task_SubCat__c</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Task</value>
        </filters>
        <label>Activity Creation Rules</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>System_Workflow_Rules</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Evaluation_Rule__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>System</value>
        </filters>
        <label>System Workflow Rules</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Rules</pluralLabel>
    <recordTypes>
        <fullName>Generic</fullName>
        <active>true</active>
        <label>Generic Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>